@@ -2,6 +2,7 @@ package com.home.shah.ProblemSolvingPractice.LeetCode;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -10,7 +11,8 @@ public class ArrayIssue {
         int[] arr = {1, 2, 4, 7};
 //        findSimilarElementByIndex(arr);
 //        sendtoList(arr);
-        productOfArrayElements();
+        //productOfArrayElements();
+        digitFrequency();
     }
 
     public static void findSimilarElementByIndex(int[] arr) {
@@ -38,20 +40,21 @@ public class ArrayIssue {
 
     public static void digitFrequency() {
         String input = " 2234256754389934" ;
+        HashMap<Character, Integer> map = new HashMap<>();
+        for (int i = 0; i < input.length(); i++) {
+            map.put(input.charAt(i), map.getOrDefault(input.charAt(i), 0) + 1);
+        }
+        System.out.println(map);
 
     }
 
     public static void productOfArrayElements() {
         int[] nums = {1, 2, 4, 7};
-        int pro =1;
-        int[] output = new int[5];
-        for(int i: nums){
-            pro*=i;
+        int product =  1;
+        for (int i = 0; i < nums.length; i++) {
+            product *= nums[i];
         }
-        System.out.println(output);
-        for (int i=0;i<nums.length;i++) {
-            output[i] = pro / i;
-        }
+        System.out.println(product);
     }
     public long interchangeableRectangles(int[][] rectangles) {
         for (int i = 0; i < rectangles.length; i++) {
@@ -68,6 +71,7 @@ public class ArrayIssue {
     }
     public static void arrayasList(){
         int[] arr = {1, 2, 4, 7};
-        List<Integer> myList = Arrays.stream(arr).boxed().collect(Collectors.toList());
+        List<Integer> myList = new ArrayList<>(Arrays.stream(arr).boxed().toList());
+        myList.sort(Integer::compareTo);
     }
 }
